[package]
name = "barkup"
version = "0.0.2"
authors = ["Harshad Sharma <harshad@sharma.io>"]
edition = "2018"
description = "Barkup: Archive and Search Browser Bookmarks"
homepage = "https://github.com/hiway/rust-barkup"
repository = "https://github.com/hiway/rust-barkup"
license = "BSD-3-Clause"
keywords = ["archive", "bookmark", "browser", "firefox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
